add css rules to style the form components

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </div>
     </div>
     <!-- User Input Form -->
-    <div class="container-fluid">
+    <div class="container-fluid form-container">
         <div class="row">
             <div class="col-md-6">
                 <div class="form">
-                    <form action="">
+                    <form>
                         <select class="form-select pizza-size" id="select-size" required>
                             <option selected>Select Size</option>
                             <option value="300" label="Small">Small</option>
