--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
             </div>
         </div>
     </div>
+    <!-- Order Summary Table -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Your Order Summary</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th scope="col">Order#</th>
+                            <th scope="col">Size</th>
+                            <th scope="col">Crust</th>
+                            <th scope="col">Topping</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row"></th>
+                            <td id="selected-size"></td>
+                            <td id="selected-crust"></td>
+                            <td id="selected-topping"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
 
 
