--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h2>Your Order Summary</h2>
-                <table>
+                <table class="order-summary-table">
                     <thead>
                         <tr>
                             <th scope="col">Order#</th>
@@ -78,6 +78,9 @@
                         </tr>
                     </tbody>
                 </table>
+                <div>
+                    <button class="btn btn-primary" id="add-order" value="submit" onclick="formSubmit()">Add Order</button>
+                </div>
             </div>
         </div>
     </div>
