add logo and css rules to style the logo

--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
     <title>Tezza's Pizzeria</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="topnav">
-                    <a class="active" href="#home">Home</a>
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact Us</a>
-                    <a href="#about">About Us</a>
+    <div class="container-fluid" id="hero">
+            <div class="row">
+                <div class="col-12" id="logo"><img src="./images/logo1.jpg" alt="" id="img1"></div>
+                <div class="col-12" id="heading">
+                    <h2 class="logo">Welcome to Tezza's Pizza</h2>
+                    <p>We are eager to serve you.</p>
+                    <p>Enter Your Order Below</p> 
                 </div>
             </div>
-        </div>
     </div>
     <!-- User Input Form -->
     <div class="container-fluid form-container">
