--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <div class="col-12" id="logo"><img src="./images/logo1.jpg" alt="" id="img1"></div>
                 <div class="col-12" id="heading">
                     <h2 class="logo">Welcome to Tezza's Pizza</h2>
-                    <p class="welcome">We are eager to serve you.</p>
-                    <p class="welcome">Enter Your Order Below</p> 
+                    <p class="welcome">We are eager to serve you.</p> 
                 </div>
             </div>
     </div>
     <!-- User Input Form -->
     <div class="container-fluid form-container">
         <div class="row">
+            <p class="welcome">Enter Your Order Below</p>
                     <form class="form">
                         <select class="form-select pizza-size" id="select-size" required>
                             <option selected>Select Size</option>
@@ -75,6 +75,13 @@
                     <button class="btn btn-primary" id="add-order" value="submit" onclick="formSubmit()">Add Order</button>
                 </div>
             </div>
+    </div>
+    <div class="container" id="contact">
+        <div class="row">
+            <h3>Contact Us</h3>
+            <p class="contact1"> TELEPHONE NUMBER <a href="tel:0711319347">0711319347 <b></b></a></p>
+            <p class="contact1">EMAIL ADDRESS <a href="mailto:elsyakoth@gmail.com">Send email</a></p>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
